--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,43 +1,3 @@
 ---
-import { getCollection } from 'astro:content';
-import MainLayout from '@layouts/MainLayout.astro';
-import BlogCard from '@components/BlogCard.astro';
-
-const solanaPosts = await getCollection('solana');
-console.log('solanaPosts', solanaPosts)
 ---
-
-<MainLayout title="Home | Kevin Fiorentino">
-  <h1 class="text-gradient">
-    Kevin Fiorentino
-  </h1>
-  <div role="list" class="link-card-grid">
-    {
-      solanaPosts.map(item => (
-        <BlogCard
-          slug={item.slug}
-          collection={item.collection}
-          title={item.data.title}
-          desc={item.data.desc}
-          image={item.data.image}
-          date={item.data.date}
-        >
-        </BlogCard>
-      ))
-    }
-  </div>
-</MainLayout>
-
-<style>
-  .link-card-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1rem;
-    padding: 0;
-  }
-  @media (max-width: 768px) {
-    .link-card-grid {
-      grid-template-columns: 1fr;
-    }
-  }
-</style>
+<meta http-equiv="refresh" content="0;url=/en/" />
