--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,18 +1,21 @@
 ---
+export interface Props {
+	title: string;
+}
+
+import { getLangFromUrl } from '@i18n/utils';
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
 
 import '@styles/global.css';
 
-export interface Props {
-	title: string;
-}
-
 const { title } = Astro.props;
+
+const lang = getLangFromUrl(Astro.url);
 ---
 
 <!DOCTYPE html>
-<html id="kevin" class="dark" lang="en">
+<html id="kevin" class="dark" lang={lang}>
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
