--- a/src/pages/[lang]/blog/[category]/[...slug].astro
+++ b/src/pages/[lang]/blog/[category]/[...slug].astro
@@ -7,7 +7,7 @@ export async function getStaticPaths() {
   const pages: any[] = [];
 
   // Build pages of each content
-  for await (let c of collectionMetadata) {
+  /* for await (let c of collectionMetadata) {
     const ipfs = await getCollection(c.name as any);
     ipfs.map((post) => {
       pages.push({
@@ -15,7 +15,7 @@ export async function getStaticPaths() {
         props: post,
       })
     });
-  }
+  } */
 
   return pages;
 }
