--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -6,6 +6,7 @@ export interface Props {
 import { getLangFromUrl } from '@i18n/utils';
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
+import LanguagePicker from '@components/LanguagePicker.astro';
 
 import '@styles/global.css';
 
@@ -25,12 +26,15 @@ const lang = getLangFromUrl(Astro.url);
 	</head>
 	<body class="dark:bg-gray-900">
     <Header></Header>
+    <LanguagePicker></LanguagePicker>
     <main>
       <slot />
     </main>
     <Footer></Footer>
+
 	</body>
 </html>
+
 <style is:global>
 :root {
   --primary: #2596be;
