--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -17,7 +17,10 @@ export async function getStaticPaths() {
 }
 ---
 
-<MainLayout title="Blog | Kevin Fiorentino">
+<MainLayout
+  title="Blog | Kevin Fiorentino"
+  description="Kevin Fiorentino's personal blog"
+>
   <h1 class="text-gradient">
     Blog ENGLISH
   </h1>
