--- a/src/pages/[lang]/contact.astro
+++ b/src/pages/[lang]/contact.astro
@@ -16,7 +16,10 @@ export async function getStaticPaths() {
 }
 ---
 
-<MainLayout title="Contact | Kevin Fiorentino">
+<MainLayout
+  title="Contact | Kevin Fiorentino"
+  description="Contact to Kevin Fiorentino"
+>
   <h1 class="text-gradient">
     Contact
   </h1>
