--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -25,7 +25,10 @@ export async function getStaticPaths() {
 
 ---
 
-<MainLayout title="Home | Kevin Fiorentino">
+<MainLayout
+  title="Home | Kevin Fiorentino"
+  description="Kevin Fiorentino's personal and professional website"
+>
   <h1 class="text-gradient">
     Kevin Fiorentino {lang}
   </h1>
