--- a/src/pages/[lang]/work-experience.astro
+++ b/src/pages/[lang]/work-experience.astro
@@ -16,7 +16,10 @@ export async function getStaticPaths() {
 }
 ---
 
-<MainLayout title="Word experience | Kevin Fiorentino">
+<MainLayout
+  title="Word experience | Kevin Fiorentino"
+  description="Kevin Fiorentino's work experience"
+>
   <h1 class="text-gradient">
     Word experience
   </h1>
