--- a/src/pages/[lang]/who-i-am.astro
+++ b/src/pages/[lang]/who-i-am.astro
@@ -16,7 +16,10 @@ export async function getStaticPaths() {
 }
 ---
 
-<MainLayout title="Who I am? | Kevin Fiorentino">
+<MainLayout
+  title="Who I am? | Kevin Fiorentino"
+  description="Who is Kevin Fiorentino?"
+>
   <h1 class="text-gradient">
     Who I am?
   </h1>
