Change main collections

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -91,12 +91,12 @@ const year = new Date().getFullYear();
                 </a>
               </li>
               <li>
-                <a href={`/${lang}/blog/solana`} title="Blog Solana" class="text-gray-700 transition hover:opacity-75 dark:text-white">
+                <a href={`/${lang}/tags/solana`} title="Blog Solana" class="text-gray-700 transition hover:opacity-75 dark:text-white">
                   Solana
                 </a>
               </li>
               <li>
-                <a href={`/${lang}/blog/ipfs`} title="Blog IPFS" class="text-gray-700 transition hover:opacity-75 dark:text-white">
+                <a href={`/${lang}/tags/ipfs`} title="Blog IPFS" class="text-gray-700 transition hover:opacity-75 dark:text-white">
                   IPFS
                 </a>
               </li>
