Head: metadata, seo and new logo

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -2,9 +2,11 @@
 export interface Props {
 	title: string;
   description: string;
+  image: string;
 }
 
 import { getLangFromUrl } from '@i18n/utils';
+import Head from '@components/Head.astro';
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
 import LanguagePicker from '@components/LanguagePicker.astro';
@@ -12,21 +14,16 @@ import LanguagePicker from '@components/LanguagePicker.astro';
 import '@styles/global.css';
 
 const { title, description } = Astro.props;
-
 const lang = getLangFromUrl(Astro.url);
 ---
 
 <!DOCTYPE html>
 <html id="kevin" class="dark" lang={lang}>
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-    <meta name="author" content="Kevin Fiorentino" />
-    <meta name="description" content={description} />
-		<link href="/favicon.ico" type="image/x-icon" rel="icon" />
-		<title>{title}</title>
-	</head>
+	<Head
+    title={title}
+    description={description}
+    image=""
+  ></Head>
 	<body class="dark:bg-gray-900">
     <Header></Header>
     <LanguagePicker></LanguagePicker>
