--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -20,6 +20,7 @@ export async function getStaticPaths() {
 <MainLayout
   title="Blog | Kevin Fiorentino"
   description="Kevin Fiorentino's personal blog"
+  image=''
 >
   <h1 class="text-gradient">
     Blog ENGLISH
