--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -26,6 +26,7 @@ export async function getStaticPaths() {
 <MainLayout
   title="Home | Kevin Fiorentino"
   description="Kevin Fiorentino's personal and professional website"
+  image=''
 >
   <h1 class="text-gradient">
     Kevin Fiorentino {lang}
