--- a/src/pages/[lang]/work-experience.astro
+++ b/src/pages/[lang]/work-experience.astro
@@ -19,6 +19,7 @@ export async function getStaticPaths() {
 <MainLayout
   title="Word experience | Kevin Fiorentino"
   description="Kevin Fiorentino's work experience"
+  image=''
 >
   <h1 class="text-gradient">
     Word experience
