--- a/src/pages/[lang]/contact.astro
+++ b/src/pages/[lang]/contact.astro
@@ -19,6 +19,7 @@ export async function getStaticPaths() {
 <MainLayout
   title="Contact | Kevin Fiorentino"
   description="Contact to Kevin Fiorentino"
+  image=''
 >
   <h1 class="text-gradient">
     Contact
