--- a/src/pages/[lang]/tags/[tag].astro
+++ b/src/pages/[lang]/tags/[tag].astro
@@ -68,6 +68,7 @@ const props = Astro.props;
 <MainLayout
   title={`Blog ${param.tag} | Kevin Fiorentino`}
   description={`Kevin Fiorentino's blog about ${param.tag}`}
+  image=''
 >
   <h1 class="text-gradient">
     Tag {param.tag}
@@ -79,9 +80,9 @@ const props = Astro.props;
           slug={item.slug}
           collection={item.collection}
           title={item.data.title}
-          desc={item.data.desc}
+          description={item.data.description}
           image={item.data.image}
-          date={item.data.date}
+          pubDate={item.data.pubDate}
         >
         </BlogCard>
       ))
