--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -21,7 +21,6 @@ const lang = getLangFromUrl(Astro.url);
 
 	<!-- Global Metadata -->
 	<link href="/favicon.ico" type="image/x-icon" rel="icon" />
-	<link rel="manifest" href="/manifest.webmanifest" />              <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 	<meta name="google" content="notranslate" />
 
 	<!-- Open Graph / Facebook -->
@@ -33,11 +32,11 @@ const lang = getLangFromUrl(Astro.url);
 	<meta property="og:image" content={image} />
 
 	<!-- Twitter -->
-	<meta name="twitter:card" content="summary_large_image" />    <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+	<meta name="twitter:card" content="summary_large_image" />
 	<meta name="twitter:title" content={title} />
 	<meta name="twitter:description" content={description} />
 	<meta name="twitter:image" content={image} />
 	<meta name="twitter:image:alt" content={title} />
-	<meta name="twitter:site" content="@gndx" />
-	<meta name="twitter:creator" content="@gndx" />
+	<meta name="twitter:site" content="@Kevfiorentino" />
+	<meta name="twitter:creator" content="@Kevfiorentino" />
 </head>
